fixup headless import logic in docker